--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_edit.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_edit.html
@@ -1,16 +1,16 @@
 <fieldset>
-	<xen:selectunit label="{xen:phrase sv_warning_category}:" name="sv_warning_category_id" value="{$action.sv_warning_category_id}">
-		<xen:option value="0" label="({xen:phrase none})" />
+	<xen:selectunit label="{{ phrase('sv_warning_category') }}:" name="sv_warning_category_id" value="{$action.sv_warning_category_id}">
+		<xen:option value="0" label="({{ phrase('none') }})" />
 		<xen:options source="$warningCategories" />
 	</xen:selectunit>
 </fieldset>
 
 <fieldset>
-	<xen:selectunit label="{xen:phrase sv_warning_node_id}:" name="sv_post_node_id" value="{$action.sv_post_node_id}">
+	<xen:selectunit label="{{ phrase('sv_warning_node_id') }}:" name="sv_post_node_id" value="{$action.sv_post_node_id}">
 		<xen:options source="$nodeList" />
-		<xen:explain>{xen:phrase sv_warning_action_post_new_thread}</xen:explain>
+		<xen:explain>{{ phrase('sv_warning_action_post_new_thread') }}</xen:explain>
 	</xen:selectunit>
 
-	<xen:spinboxunit label="{xen:phrase sv_warning_thread_id}:" explain="{xen:phrase sv_warning_action_post_thread_reply}" name="sv_post_thread_id" value="{$action.sv_post_thread_id}" />
-	<xen:spinboxunit label="{xen:phrase sv_warning_post_as_user_id}:" explain="{xen:phrase sv_warning_action_post_as_user}" name="sv_post_as_user_id" value="{$action.sv_post_as_user_id}" />
+	<xen:spinboxunit label="{{ phrase('sv_warning_thread_id') }}:" explain="{{ phrase('sv_warning_action_post_thread_reply') }}" name="sv_post_thread_id" value="{$action.sv_post_thread_id}" />
+	<xen:spinboxunit label="{{ phrase('sv_warning_post_as_user_id') }}:" explain="{{ phrase('sv_warning_action_post_as_user') }}" name="sv_post_as_user_id" value="{$action.sv_post_as_user_id}" />
 </fieldset>
