--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_list.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_list.html
@@ -1,51 +1,51 @@
-<xen:if is="{$warningActionCategories}">
-	<xen:form action="{xen:adminlink warnings}" class="section">
+<xf:if is="{$warningActionCategories}">
+	<xen:form action="{{ link('warnings') }}" class="section">
 		<h2 class="subHeading">
-			{xen:phrase warning_actions}
+			{{ phrase('warning_actions') }}
 		</h2>
 
 		<ol class="FilterList Scrollable">
-			<xen:foreach loop="$warningActionCategories" key="$warningActionCategoryId" value="$warningActionCategory">
+			<xf:foreach loop="$warningActionCategories" key="$warningActionCategoryId" value="$warningActionCategory">
 				<li>
 					<h3 class="textHeading" style="text-align: right">
 						<span style="float: left">
-							<xen:if is="{$warningActionCategoryId}">
-								<a href="{xen:adminlink warnings/category-edit, '', 'warning_category_id={$warningActionCategoryId}'}" title="{xen:phrase edit_category}">{$warningActionCategory.title}</a>
-							<xen:else />
-								{xen:phrase sv_global_warning_actions}
-							</xen:if>
+							<xf:if is="{$warningActionCategoryId}">
+								<a href="{xen:adminlink warnings/category-edit, '', 'warning_category_id={$warningActionCategoryId}'}" title="{{ phrase('edit_category') }}">{$warningActionCategory.title}</a>
+							<xf:else />
+								{{ phrase('sv_global_warning_actions') }}
+							</xf:if>
 						</span>
 						<span style="font-weight: normal">
-							<xen:if is="{$warningActionCategoryId}">
-								<a href="{xen:adminlink warnings/category-edit, '', 'warning_category_id={$warningActionCategoryId}'}" title="{xen:phrase edit_category}">{xen:phrase edit}</a>
+							<xf:if is="{$warningActionCategoryId}">
+								<a href="{xen:adminlink warnings/category-edit, '', 'warning_category_id={$warningActionCategoryId}'}" title="{{ phrase('edit_category') }}">{{ phrase('edit') }}</a>
 								|
-							</xen:if>
-							<a href="{xen:adminlink warnings/action-add, '', 'warning_category_id={$warningActionCategoryId}'}">{xen:phrase create_new_warning_action}</a>
+							</xf:if>
+							<a href="{xen:adminlink warnings/action-add, '', 'warning_category_id={$warningActionCategoryId}'}">{{ phrase('create_new_warning_action') }}</a>
 						</span>
 					</h3>
 					<ol>
-						<xen:foreach loop="$warningActionCategory.actions" value="$action">
+						<xf:foreach loop="$warningActionCategory.actions" value="$action">
 							<xen:listitem
 								id="action-{$action.warning_action_id}"
-								label="{xen:phrase points}: {$action.points}"
+								label="{{ phrase('points') }}: {$action.points}"
 								href="{xen:adminlink warnings/action/edit, $action}"
 								delete="{xen:adminlink warnings/action/delete, $action}"
 							>
 								<xen:snippet>
-									{xen:if "{$action.action} == 'ban'", '{xen:phrase ban}',
-										{xen:if "{$action.action} == 'discourage'", '{xen:phrase discourage}',
-										{xen:if "{$action.action} == 'groups'", '{xen:phrase add_to_selected_groups}'}
+									{xen:if "{$action.action} == 'ban'", '{{ phrase('ban') }}',
+										{xen:if "{$action.action} == 'discourage'", '{{ phrase('discourage') }}',
+										{xen:if "{$action.action} == 'groups'", '{{ phrase('add_to_selected_groups') }}'}
 									}},
-									{xen:if "{$action.action_length_type} == 'permanent'", '{xen:phrase permanent}',
-										{xen:if "{$action.action_length_type} == 'points'", '{xen:phrase while_at_or_above_points_threshold}',
-										'{xen:phrase temporary}'
+									{xen:if "{$action.action_length_type} == 'permanent'", '{{ phrase('permanent') }}',
+										{xen:if "{$action.action_length_type} == 'points'", '{{ phrase('while_at_or_above_points_threshold') }}',
+										'{{ phrase('temporary') }}'
 									}}
 								</xen:snippet>
 							</xen:listitem>
-						</xen:foreach>
+						</xf:foreach>
 					</ol>
 				</li>
-			</xen:foreach>
+			</xf:foreach>
 		</ol>
 	</xen:form>
-</xen:if>
+</xf:if>
