--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warning_actions_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warning_actions_info.html
@@ -1,8 +1,6 @@
 <xf:title>{{ phrase('sv_warning_action_for_x', {'name':'{$user.username}'}) }}</xf:title>
 
-
-	<xf:breadcrumb href="{xen:link members, $user}">{$user.username}</xf:breadcrumb>
-
+<xf:breadcrumb href="{{ link('members', $user) }}">{$user.username}</xf:breadcrumb>
 
 <div class="xenForm formOverlay overlayScroll">
 	<dl class="ctrlUnit">
