Change CSS src from member_view.css to member.less

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warning_actions.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warning_actions.html
@@ -3,7 +3,7 @@
 
 <xf:breadcrumb href="{{ link('members', $user) }}">{$user.username}</xf:breadcrumb>
 
-<xf:css src="member_view.css" />
+<xf:css src="member.less" />
 
 <div class="warningActionList">
 <table class="dataTable" style="table-layout: fixed">
