Convert sv_member_warn_chooser.css to less

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="styles/chosen/chosen.min.css" />
-<xf:css src="sv_member_warn_chooser.css" />
+
+<xf:css src="sv_member_warn_chooser.less" />
 
 <xf:js addon="SV/WarningImprovements" src="js/chosen/chosen.jquery.js" min="1" /><xf:comment>missing?</xf:comment>
 <xf:js addon="SV/WarningImprovements" src="js/sv/warningimprovements/warnings.js" min="1" />
