port warning criteria template bits

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warningimprovements_criteria.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warningimprovements_criteria.html
@@ -1,36 +1,81 @@
-	<li><label>
-		<input type="checkbox" name="user_criteria[warning_points_l][rule]" value="warning_points_l" class="Disabler" id="ucrit_warning_points_l" {xen:checked $userCriteria.warning_points_l} />
-		{{ phrase('user_has_received_at_least_x_warnings_points') }}:</label>
-		<div class="criteriaQualifier" id="ucrit_warning_points_l_Disabler">
-			<xen:spinbox name="user_criteria[warning_points_l][data][points]" value="{$userCriteria.warning_points_l.points}" size="5" min="0" step="1" />
-			{{ phrase('days') }}: <xen:spinbox name="user_criteria[warning_points_l][data][days]" value="{$userCriteria.warning_points_l.days}" size="5" min="0" step="1" />
-			<br/><input type="checkbox" name="user_criteria[sv_warning_minimum][data][expired]" value="1" {xen:checked $userCriteria.sv_warning_minimum.expired} /> {{ phrase('sv_warning_include_expired') }}
-		</div>
-	</li>
-	<li><label>
-		<input type="checkbox" name="user_criteria[warning_points_m][rule]" value="warning_points_m" class="Disabler" id="ucrit_warning_points_m" {xen:checked $userCriteria.warning_points_m} />
-		{{ phrase('user_has_received_at_most_x_warnings_points') }}:</label>
-		<div class="criteriaQualifier" id="ucrit_warning_points_m_Disabler">
-			<xen:spinbox name="user_criteria[warning_points_m][data][points]" value="{$userCriteria.warning_points_m.points}" size="5" min="0" step="1" />
-			{{ phrase('days') }}: <xen:spinbox name="user_criteria[warning_points_m][data][days]" value="{$userCriteria.warning_points_m.days}" size="5" min="0" step="1" />
-			<br/><input type="checkbox" name="user_criteria[sv_warning_minimum][data][expired]" value="1" {xen:checked $userCriteria.sv_warning_minimum.expired} /> {{ phrase('sv_warning_include_expired') }}
-		</div>
-	</li>
-	<li><label>
-		<input type="checkbox" name="user_criteria[sv_warning_minimum][rule]" value="sv_warning_minimum" class="Disabler" id="ucrit_sv_warning_minimum" {xen:checked $userCriteria.sv_warning_minimum} />
-		{{ phrase('user_has_received_at_least_x_warnings_count') }}:</label>
-		<div class="criteriaQualifier" id="ucrit_sv_warning_minimum_Disabler">
-			<xen:spinbox name="user_criteria[sv_warning_minimum][data][count]" value="{$userCriteria.sv_warning_minimum.count}" size="5" min="0" step="1" />
-			{{ phrase('days') }}: <xen:spinbox name="user_criteria[sv_warning_minimum][data][days]" value="{$userCriteria.sv_warning_minimum.days}" size="5" min="0" step="1" />
-			<br/><input type="checkbox" name="user_criteria[sv_warning_minimum][data][expired]" value="1" {xen:checked $userCriteria.sv_warning_minimum.expired} /> {{ phrase('sv_warning_include_expired') }}
-		</div>
-	</li>
-	<li><label>
-		<input type="checkbox" name="user_criteria[sv_warning_maximum][rule]" value="sv_warning_maximum" class="Disabler" id="ucrit_sv_warning_maximum" {xen:checked $userCriteria.sv_warning_maximum} />
-		{{ phrase('user_has_received_at_most_x_warnings_count') }}:</label>
-		<div class="criteriaQualifier" id="ucrit_sv_warning_maximum_Disabler">
-			<xen:spinbox name="user_criteria[sv_warning_maximum][data][count]" value="{$userCriteria.sv_warning_maximum.count}" size="5" min="0" step="1" />
-			{{ phrase('days') }}: <xen:spinbox name="user_criteria[sv_warning_maximum][data][days]" value="{$userCriteria.sv_warning_maximum.days}" size="5" min="0" step="1" />
-			<br/><input type="checkbox" name="user_criteria[sv_warning_minimum][data][expired]" value="1" {xen:checked $userCriteria.sv_warning_minimum.expired} /> {{ phrase('sv_warning_include_expired') }}
-		</div>
-	</li>
+<xf:checkboxrow label="{{ phrase('warnings') }}">
+	<xf:option name="user_criteria[warning_points_l][rule]" value="warning_points_l" selected="{$criteria.warning_points_l}"
+		label="{{ phrase('user_has_received_at_least_x_warnings_points:') }}">
+		<xf:dependent>
+			<div class="inputGroup">
+				<xf:numberbox name="user_criteria[warning_points_l][data][points]" value="{$criteria.warning_points_l.points}" size="5" min="0" step="1" />
+				<span class="inputGroup-text">
+					{{ phrase('days:') }}
+				</span>
+				<span class="inputGroup" dir="ltr">
+					<xf:numberbox name="user_criteria[warning_points_l][data][days]" value="{$criteria.warning_points_l.days}" size="5" min="0" step="1" />
+				</span>
+			</div>
+
+			<xf:checkbox>
+				<xf:option name="user_criteria[warning_points_l][data][expired]" value="1" selected="{$criteria.warning_points_l.expired}"
+				label="{{ phrase('sv_warning_include_expired') }}" />
+			</xf:checkbox>
+		</xf:dependent>
+	</xf:option>
+
+	<xf:option name="user_criteria[warning_points_m][rule]" value="warning_points_m" selected="{$criteria.warning_points_m}"
+		label="{{ phrase('user_has_received_at_most_x_warnings_points:') }}">
+		<xf:dependent>
+			<div class="inputGroup">
+				<xf:numberbox name="user_criteria[warning_points_m][data][points]" value="{$criteria.warning_points_m.points}" size="5" min="0" step="1" />
+				<span class="inputGroup-text">
+					{{ phrase('days:') }}
+				</span>
+				<span class="inputGroup" dir="ltr">
+					<xf:numberbox name="user_criteria[warning_points_m][data][days]" value="{$criteria.warning_points_m.days}" size="5" min="0" step="1" />
+				</span>
+			</div>
+
+			<xf:checkbox>
+				<xf:option name="user_criteria[warning_points_m][data][expired]" value="1" selected="{$criteria.warning_points_m.expired}"
+				label="{{ phrase('sv_warning_include_expired') }}" />
+			</xf:checkbox>
+		</xf:dependent>
+	</xf:option>
+
+	<xf:option name="user_criteria[sv_warning_minimum][rule]" value="sv_warning_minimum" selected="{$criteria.sv_warning_minimum}"
+		label="{{ phrase('user_has_received_at_most_x_warnings_points:') }}">
+		<xf:dependent>
+			<div class="inputGroup">
+				<xf:numberbox name="user_criteria[sv_warning_minimum][data][points]" value="{$criteria.sv_warning_minimum.points}" size="5" min="0" step="1" />
+				<span class="inputGroup-text">
+					{{ phrase('days:') }}
+				</span>
+				<span class="inputGroup" dir="ltr">
+					<xf:numberbox name="user_criteria[sv_warning_minimum][data][days]" value="{$criteria.sv_warning_minimum.days}" size="5" min="0" step="1" />
+				</span>
+			</div>
+
+			<xf:checkbox>
+				<xf:option name="user_criteria[sv_warning_minimum][data][expired]" value="1" selected="{$criteria.sv_warning_minimum.expired}"
+				label="{{ phrase('sv_warning_include_expired') }}" />
+			</xf:checkbox>
+		</xf:dependent>
+	</xf:option>
+
+	<xf:option name="user_criteria[sv_warning_maximum][rule]" value="sv_warning_maximum" selected="{$criteria.sv_warning_maximum}"
+		label="{{ phrase('user_has_received_at_most_x_warnings_points:') }}">
+		<xf:dependent>
+			<div class="inputGroup">
+				<xf:numberbox name="user_criteria[sv_warning_maximum][data][points]" value="{$criteria.sv_warning_maximum.points}" size="5" min="0" step="1" />
+				<span class="inputGroup-text">
+					{{ phrase('days:') }}
+				</span>
+				<span class="inputGroup" dir="ltr">
+					<xf:numberbox name="user_criteria[sv_warning_maximum][data][days]" value="{$criteria.sv_warning_maximum.days}" size="5" min="0" step="1" />
+				</span>
+			</div>
+
+			<xf:checkbox>
+				<xf:option name="user_criteria[sv_warning_maximum][data][expired]" value="1" selected="{$criteria.sv_warning_maximum.expired}"
+				label="{{ phrase('sv_warning_include_expired') }}" />
+			</xf:checkbox>
+		</xf:dependent>
+	</xf:option>
+</xf:checkboxrow>
