Make template modification 'sv_warningimprovements_warning_edit5' work

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_edit_inputs.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_edit_inputs.html
@@ -1,7 +1,6 @@
-<fieldset>
-	<xen:selectunit label="{{ phrase('sv_warning_category') }}:" name="sv_warning_category_id" value="{$warning.sv_warning_category_id}">
-		<xen:options source="$warningCategories" />
-	</xen:selectunit>
+<xf:selectrow name="sv_warning_category_id" value="{$warning.sv_warning_category_id}" label="{{ phrase('sv_warning_category:') }}">
+	<xf:option>&nbsp;</xf:option>
+	<xf:option src="$warningCategories" />
+</xf:selectrow>
 
-	<xen:spinboxunit label="{{ phrase('display_order') }}:" name="sv_display_order" value="{$warning.sv_display_order}" min="0" step="10" />
-</fieldset>
+<xf:numberboxrow name="sv_display_order" value="{$warning.sv_display_order}" min="0" step="10" label="{{ phrase('display_order:') }}" />
