Correct the JS file path

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -2,8 +2,8 @@
 
 <xf:css src="sv_member_warn_chooser.less" />
 
-<xf:js addon="SV/WarningImprovements" src="js/chosen/chosen.jquery.js" min="1" /><xf:comment>missing?</xf:comment>
-<xf:js addon="SV/WarningImprovements" src="js/sv/warningimprovements/warnings.js" min="1" />
+<xf:js addon="SV/WarningImprovements" src="sv/chosen/chosen.jquery.js" min="1" /><xf:comment>missing?</xf:comment>
+<xf:js addon="SV/WarningImprovements" src="sv/warningimprovements/warnings.js" min="1" />
 
 <div id="warningViewSelect" class="JsOnly" style="display:none;">
 	<dl class="ctrlUnit">
