--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -5,29 +5,21 @@
 <xf:js addon="SV/WarningImprovements" src="sv/chosen/chosen.jquery.js" min="1" /><xf:comment>missing?</xf:comment>
 <xf:js addon="SV/WarningImprovements" src="sv/warningimprovements/warnings.js" min="1" />
 
-<div id="warningViewSelect" class="JsOnly" style="display:none;">
-	<dl class="ctrlUnit">
-		<dt>{{ phrase('warning_type') }}:</dt>
-
-		<dd>
-			<select class="warningItems WarningSelector" name="warning_definition_id"
-				data-customwarningtitle="#customWarningTitle"
-				data-noresultstext="{{ phrase('sv_no_results_match') }}"
-				data-placeholdertext="{{ phrase('sv_choose_a_warning') }}">
-				<option></option>
-
-				<xf:foreach loop="$warningCategories" value="$warningCategory">
-					<optgroup class="warningCategory" label="{$warningCategory.title}">
-						<xf:foreach loop="$warningCategory.warnings" value="$warning">
-							<option class="warningDefinition FormFiller" value="{$warning.warning_definition_id}" {xen:if {$warning.sv_custom_title}, 'data-custom-title="1"', ''}>{$warning.title}</option>
-						</xf:foreach>
-					</optgroup>
+<div id="warningViewSelect" class="JsOnly" style="display: none;">
+	<xf:formrow label="{{ phrase('warning_type') }}">
+		<xf:select name="warning_definition_id" value="{$xf.visitor.style_id}" label="{{ phrase('style') }}" class="warningItems WarningSelector"
+				   data-no-results-text="{{ phrase('sv_no_results_match') }}"
+				   data-place-holder-text="{{ phrase('sv_choose_a_warning') }}">
+			<xf:option value=""></xf:option>
+			<xf:optgroup label="{$warningCategory.title}">
+				<xf:foreach loop="$warningCategory.warnings" value="$warning">
+					<xf:option class="warningDefinition" value="{$warning.warning_definition_id}">{$warning.title}</xf:option>
 				</xf:foreach>
-			</select>
-
-			<input id="customWarningTitle" class="textCtrl" style="display:none" type="text" name="title" placeholder="{{ phrase('custom_warning') }}..." maxlength="255" />
-		</dd>
-	</dl>
+			</xf:optgroup>
+		</xf:select>
+	</xf:formrow>
+	
+	<xf:textboxrow name="title" label="{{ phrase('custom_warning') }}" />
 </div>
 
 <div id="warningViewRadio">
