Changes related to template named 'sv_member_warning_actions'

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warning_actions.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warning_actions.html
@@ -1,9 +1,4 @@
-<xf:title>{{ phrase('warnings') }}: {$user.username}</xf:title>
-<xf:h1>{{ phrase('warnings') }}</xf:h1>
-
-<xf:breadcrumb href="{{ link('members', $user) }}">{$user.username}</xf:breadcrumb>
-
-<xf:css src="member.less" />
+<xf:title>{{ phrase('warnings:') }} {$user.username}</xf:title>
 
 <div class="block">
 	<div class="block-container">
