Fix template 'sv_warning_action_edit'

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warning_actions.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warning_actions.html
@@ -28,7 +28,7 @@
 		</div>
 		<div class="block-footer">
 			<ul class="listInline listInline--bullet">
-				<li>{{ phrase('sv_total_warning_actions:') }} {{ $user.WarningActionsCount }}</li>
+				<li>{{ phrase('sv_total_warning_actions:') }} {{ count($user.WarningActions)|number }}</li>
 			</ul>
 		</div>
 	</div>
