--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_edit.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_edit.html
@@ -8,11 +8,15 @@
 
 <hr class="formRowSep" /><xf:comment>Required to give seperator similar to XF1</xf:comment>
 
-<xf:selectrow name="sv_post_node_id" value="{$action.sv_post_node_id}}" label="{{ phrase('sv_warning_node_id') }}" explain="{{ phrase('sv_warning_action_post_new_thread') }}">
+<xf:selectrow name="sv_post_node_id" value="{$action.sv_post_node_id}" class="js-nodeList"
+			  label="{{ phrase('sv_warning_node_id') }}"
+			  explain="{{ phrase('sv_warning_action_post_new_thread') }}">
 	<xf:option value="0">{{ phrase('(none)') }}</xf:option>
 
 	<xf:foreach loop="$nodeTree.getFlattened(0)" value="$treeEntry">
-		<xf:option value="{$treeEntry.record.node_id}">{{ repeat('--', $treeEntry.depth) }} {$treeEntry.record.title}</xf:option>
+		<xf:option value="{$treeEntry.record.node_id}" disabled="{{ $treeEntry.record.node_type_id != 'Forum' ? 'disabled' : '' }}">
+			{{ repeat_raw('&nbsp; ', $treeEntry.depth) }} {$treeEntry.record.title}
+		</xf:option>
 	</xf:foreach>
 </xf:selectrow>
 
